--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </main>
 
   <footer class="footer">
-    <small>© Óptica Buenos Aires</small>
+    <small>Desarrollado por <strong>Juan Ignacio Solis</strong></small>
   </footer>
 
   <script src="app.js?v=9"></script>
